--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input type="text" class="form-control" id="input-search" placeholder="Example input">
           </div>
         </form>
-        <button class="btn btn-primary d-block w-100" type="submit">Search</button>
+        <button type="submit" class="btn btn-primary d-block w-100" id="submit-button">Search</button>
       </div>
 
 
@@ -44,7 +44,7 @@
 
             <div class="card">
               <div class="card-body">
-                <h4 class="card-title">City name and current date</h4>
+                <h4 id="current-day-city" class="card-title">Sapporo 9/07/2022 🌈</h4>
                 <div class="card-text">
                   <p>Temp: <span id="current-day-temp"> </span></p>
                   <p>Wind: <span id="current-day-wind"> </span></p>
@@ -89,6 +89,11 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 
+  <!-- moment -->
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+  <!-- JS -->
   <script src="./assets/js/app.js"></script>
   
 </body>
